--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+.slider__wrapper {
+  outline: 1px solid red;
+}
+
 @function tint($color, $percentage) {
   @return mix(white, $color, $percentage);
 }
@@ -43,6 +47,14 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   border-radius: $border-radius-base;
   touch-action: none;
   @include borderBox();
+
+  &__rail {
+    position: absolute;
+    width: 100%;
+    background-color: #e9e9e9;
+    height: 4px;
+    border-radius: $border-radius-base;
+  }
 
   &__track {
     position: absolute;
