--- a/src/index.scss
+++ b/src/index.scss
@@ -88,6 +88,9 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   width: 100%;
   border-radius: $border-radius-base;
   touch-action: none;
+  * {
+    outline: none;
+  }
 
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -98,18 +101,10 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   @include borderBox();
 
   &__rail {
-    // TODO
-
-    // position: absolute;
-    // width: 100%;
-    // background-color: #e9e9e9;
-    // height: 4px;
-    // border-radius: $border-radius-base;
-
     position: absolute;
     width: 100%;
     height: 6px;
-    background-color: #e9e9e9;
+    background-color: #e9e9e9; // TODO
     border: 1px solid $dark25;
     box-sizing: border-box;
     border-radius: $border-radius-base;
@@ -134,7 +129,11 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     border-radius: 50%;
     background: $primary-gradient;
     border: 2px solid #ffffff;
-    border-radius: 10px;
     touch-action: pan-x;
+  }
+
+  &__handle_focus,
+  &__handle_focused {
+    z-index: 1;
   }
 }
