--- a/src/index.scss
+++ b/src/index.scss
@@ -136,4 +136,25 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   &__handle_focused {
     z-index: 1;
   }
+
+  &_disabled {
+    //background-color: #e9e9e9;
+
+    .#{$prefixClass}__track {
+      background: $disabledColor;
+    }
+
+    .#{$prefixClass}__handle,
+    .#{$prefixClass}__dot {
+      border-color: $disabledColor;
+      box-shadow: none;
+      background: #fff;
+      cursor: not-allowed;
+    }
+
+    .#{$prefixClass}__mark-text,
+    .#{$prefixClass}__dot {
+      cursor: not-allowed !important;
+    }
+  }
 }
