--- a/src/index.scss
+++ b/src/index.scss
@@ -89,6 +89,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   width: 100%;
   border-radius: $border-radius-base;
   touch-action: none;
+  font-size: 14px;
   * {
     outline: none;
   }
@@ -106,7 +107,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   &__rail {
     position: absolute;
     width: 100%;
-    height: 6px;
+    height: 4px;
     background-color: #e9e9e9; // TODO
     border: 1px solid $dark25;
     box-sizing: border-box;
@@ -175,7 +176,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     z-index: 1;
 
     width: 100%;
-    top: 10px;
+    top: 15px;
   }
 
   &__mark {
