--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,8 +4,9 @@
   margin-bottom: 200px;
   margin-left: 1000px;
   margin-right: 100px;
-  padding: 50px;
+  height: 500px;
   width: 500px;
+  padding: 50px;
 }
 
 .block {
@@ -107,7 +108,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   &__rail {
     position: absolute;
     width: 100%;
-    height: 4px;
+    height: 6px;
     background-color: #e9e9e9; // TODO
     border: 1px solid $dark25;
     box-sizing: border-box;
@@ -117,9 +118,10 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   &__track {
     position: absolute;
     left: 0;
-    height: 4px;
+    height: 6px;
     border-radius: $border-radius-base;
     @include linear-gradient(180deg, $primary-color, $second-color, 60);
+    pointer-events: none;
   }
 
   &__handle {
@@ -129,7 +131,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     // cursor: pointer;
     // cursor: -webkit-grab;
     // cursor: grab;
-    margin-top: -5px;
+    margin-top: -4px;
     border-radius: 50%;
     background: $primary-gradient;
     border: 2px solid #ffffff;
@@ -143,8 +145,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     }
   }
 
-  &__handle_focus,
-  &__handle_focused {
+  &__handle_active {
     z-index: 2;
   }
 
@@ -159,13 +160,14 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     border-radius: 4px;
     color: #4c4c4c;
     display: none;
+    white-space: nowrap;
 
     span {
       vertical-align: middle;
       white-space: nowrap;
     }
 
-    &_active {
+    &_allways {
       display: block;
     }
   }
@@ -177,6 +179,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
 
     width: 100%;
     top: 15px;
+    pointer-events: none;
   }
 
   &__mark {
@@ -187,12 +190,13 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     font-size: 13px;
     color: #6b6b6b;
     white-space: nowrap;
+    pointer-events: initial;
   }
 
   &__dots {
     position: absolute;
     width: 100%;
-    height: 4px;
+    height: 5px;
     background: transparent;
     pointer-events: none;
     z-index: 0;
@@ -209,11 +213,13 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     cursor: pointer;
     border-radius: 50%;
     vertical-align: middle;
+    pointer-events: initial;
   }
 
-  // &__dot_active {
-  //   //border-image-source: $primary-gradient;
-  // }
+  &__dot_active {
+    //border-image-source: $primary-gradient;
+    background-color: $fifth-color;
+  }
 
   &__dot_reverse {
     margin-right: -4px;
@@ -237,6 +243,67 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     .#{$prefixClass}__mark-text,
     .#{$prefixClass}__dot {
       cursor: not-allowed !important;
+    }
+  }
+}
+
+.#{$prefixClass}_vertical {
+  width: 14px;
+  height: 100%;
+  padding: 0 5px;
+
+  .#{$prefixClass} {
+    &__rail {
+      height: 100%;
+      width: 6px;
+    }
+
+    &__track {
+      left: 5px;
+      bottom: 0;
+      width: 6px;
+    }
+
+    &__handle {
+      margin-left: -4px;
+      touch-action: pan-y;
+    }
+
+    &__mark {
+      top: 0;
+      left: 18px;
+    }
+
+    &__step {
+      height: 100%;
+      width: 4px;
+    }
+
+    &__dot {
+      left: -1px;
+      margin-bottom: 0px;
+      &:first-child {
+        margin-bottom: 0px;
+      }
+      &:last-child {
+        margin-bottom: 0px;
+      }
+    }
+
+    &__dots,
+    &__marks {
+      height: 100%;
+    }
+
+    &__marks {
+      bottom: 0;
+      top: 0;
+    }
+
+    &__tooltip {
+      transform: translate(-125%, -25%);
+      left: 0;
+      bottom: initial;
     }
   }
 }
