--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -65,21 +65,11 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
 
 @mixin borderBox() {
   box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(
-    0,
-    0,
-    0,
-    0
-  ); //  remove tap highlight color for mobile safari
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
   * {
     box-sizing: border-box;
-    -webkit-tap-highlight-color: rgba(
-      0,
-      0,
-      0,
-      0
-    ); //  remove tap highlight color for mobile safari
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
 }
 
@@ -109,7 +99,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     position: absolute;
     width: 100%;
     height: 6px;
-    background-color: #e9e9e9; // TODO
+    background-color: #e9e9e9;
     border: 1px solid $dark25;
     box-sizing: border-box;
     border-radius: $border-radius-base;
@@ -128,9 +118,6 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     position: absolute;
     width: 14px;
     height: 14px;
-    // cursor: pointer;
-    // cursor: -webkit-grab;
-    // cursor: grab;
     margin-top: -4px;
     border-radius: 50%;
     background: $primary-gradient;
@@ -167,7 +154,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
       white-space: nowrap;
     }
 
-    &_allways {
+    &_always {
       display: block;
     }
   }
@@ -205,7 +192,6 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   &__dot {
     position: absolute;
     bottom: -2px;
-    //margin-left: -4px;
     width: 8px;
     height: 8px;
     background-color: #fff;
@@ -217,7 +203,6 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   }
 
   &__dot_active {
-    //border-image-source: $primary-gradient;
     background-color: $fifth-color;
   }
 
@@ -226,8 +211,6 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   }
 
   &_disabled {
-    //background-color: #e9e9e9;
-
     .#{$prefixClass}__track {
       background: $disabledColor;
     }
