--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
-.slider__wrapper {
+.slider__wrapper1,
+.slider__wrapper2 {
   outline: 1px solid red;
   margin-top: 1000px;
   margin-bottom: 200px;
