Add pug, index.pug, components (example, panel, slider) for demo

--- a/src/style.scss
+++ b/src/style.scss
@@ -43,7 +43,7 @@ $dark25: rgba(31, 32, 65, 0.25);
 $green-light: #6fcf97;
 $blue-light: #66d2ea;
 
-$prefixClass: "slider";
+$prefixClass: "fsd-slider";
 
 $disabledColor: #ccc;
 $border-radius-base: 6px;
