Add component section-values, input, button, fix test

--- a/demo/components/example/example.pug
+++ b/demo/components/example/example.pug
@@ -1,6 +1,6 @@
 mixin example(options = {})
     - let { title = '', classNames = [], panel = {}, slider = {} } = options;
-    .example(
+    .example.js-example(
         class=`${classNames}`
         data-options=options
     )
