--- a/demo/components/example/example.scss
+++ b/demo/components/example/example.scss
@@ -1,4 +1,24 @@
 .example {
   width: 100%;
   padding: 1rem;
+  display: flex;
+  box-sizing: border-box;
+
+  &__panel {
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 400px;
+    outline: 1px solid red;
+  }
+
+  &__slider {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    outline: 1px solid green;
+  }
 }
