--- a/demo/index.scss
+++ b/demo/index.scss
@@ -4,6 +4,8 @@ body {
     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   font-variant: tabular-nums;
   font-feature-settings: "tnum", "tnum";
+  color: #717484;
+  font-size: 14px;
 }
 
 .title {
