--- a/demo/components/panel/panel.scss
+++ b/demo/components/panel/panel.scss
@@ -1,6 +1,16 @@
 .panel {
   width: 100%;
-  padding: 1rem;
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 100%;
+  padding: 0.4rem;
+  flex-direction: column;
+
+  &__label {
+    text-align: center;
+    font-weight: bold;
+  }
 
   &__sections {
     width: 100%;
