--- a/demo/index.pug
+++ b/demo/index.pug
@@ -1,3 +1,5 @@
+include ./components/label/label
+include ./components/button/button
 include ./components/input/input
 include ./components/section/section
 include ./components/panel/panel
