--- a/demo/components/example/example.scss
+++ b/demo/components/example/example.scss
@@ -5,10 +5,8 @@
   box-sizing: border-box;
 
   &__panel {
-    display: flex;
-    flex-grow: 1;
     flex-shrink: 0;
-    flex-basis: 400px;
+    max-width: 400px;
     outline: 1px solid red;
   }
 
