--- a/demo/components/section/section.scss
+++ b/demo/components/section/section.scss
@@ -2,25 +2,32 @@
   display: flex;
   align-items: center;
   width: 100%;
-  padding: 5px 0;
+  padding: 0.4rem;
+  border: 1px solid #e4e4e4;
+  border-radius: 4px;
+
+  &:not(first-child) {
+    margin-top: 0.4rem;
+  }
 
   &__label {
-    width: 30%;
+    width: 35%;
   }
 
   &__items {
     display: flex;
     flex-grow: 1;
     flex-shrink: 1;
-    flex-basis: 100;
+    flex-basis: 100%;
     flex-direction: column;
   }
 
   &__item {
     display: flex;
+    align-items: center;
   }
 
   &__button-control {
-    margin-left: 5px;
+    margin-left: 0.4rem;
   }
 }
