--- a/demo/components/input/input.scss
+++ b/demo/components/input/input.scss
@@ -36,4 +36,12 @@
     margin: 0;
     width: auto;
   }
+
+  &_control {
+    margin-top: 22px;
+  }
+
+  &__button-control {
+    margin-left: 0.4rem;
+  }
 }
