--- a/demo/components/section/section.scss
+++ b/demo/components/section/section.scss
@@ -5,6 +5,7 @@
   padding: 0.4rem;
   border: 1px solid #e4e4e4;
   border-radius: 4px;
+  position: relative;
 
   &:not(first-child) {
     margin-top: 0.4rem;
@@ -28,6 +29,8 @@
   }
 
   &__button-control {
-    margin-left: 0.4rem;
+    position: absolute;
+    top: 5px;
+    right: 7px;
   }
 }
