Add control values add, remove for any section

--- a/demo/components/input/input.pug
+++ b/demo/components/input/input.pug
@@ -1,22 +1,26 @@
 mixin input(options = {})
     -
         let { classNames=[], label, type='number', content='', value, key='', control, data = {} } = options;
-        let checked = value ? true : false;
-        if (control && (!label || !label?.content)) {
-            classNames = [...classNames, 'input_control'];
+        let checked = value && type === "checkbox" ? true : false;
+        if (control) {
+            classNames = [...classNames, 'input__control', 'js-input__control'];
         }
         let id = Math.random().toString(16).substr(2);
+        if (control && key > 1 && (label || label?.content)) {
+            const { content, ...other} = label;
+            label = {...other, id};
+        }
         classNames = classNames.join(' ');
     .input(
         class = classNames
         data-data=data
         data-key=key
     )
-        +label({...label, id}, 'input__label')
+        +label(label, 'input__label')
         .input__section
-            if key
-                span.input__section-key.js-input__section-key=key
-            input.input__input(
+            if key >= 0 && control
+                span.input__section-key.js-input__section-key #{key + 1}:
+            input.input__input.js-input__input(
                 type=type
                 id=id
                 checked=checked
@@ -26,7 +30,7 @@ mixin input(options = {})
                 +button({
                     data:{type:0},
                     type:"button",
-                    classNames:["input__button-control"],
+                    classNames:["input__button-control", "js-button-remove"],
                     content:"&#x274C",
                     title: "Remove"
                 })
