--- a/demo/components/section/section.scss
+++ b/demo/components/section/section.scss
@@ -1,3 +1,5 @@
+$parent: "section";
+
 .section {
   display: flex;
   align-items: center;
@@ -5,7 +7,6 @@
   padding: 0.4rem;
   border: 1px solid #e4e4e4;
   border-radius: 4px;
-  position: relative;
 
   &:not(first-child) {
     margin-top: 0.4rem;
@@ -25,12 +26,29 @@
 
   &__item {
     display: flex;
-    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  &__item_first {
+    &.#{$parent}__item-control {
+      .#{$parent}__button-control {
+        display: flex;
+      }
+      .input__label {
+        display: block;
+      }
+    }
+  }
+
+  &__item-control {
+    .input__label {
+      display: none;
+    }
   }
 
   &__button-control {
-    position: absolute;
-    top: 5px;
-    right: 7px;
+    display: none;
+    align-self: flex-end;
   }
 }
