Add handlers for input panel

--- a/demo/components/input/input.pug
+++ b/demo/components/input/input.pug
@@ -11,7 +11,7 @@ mixin input(options = {})
             label = {...other, id};
         }
         classNames = classNames.join(' ');
-    .input(
+    .input.js-input(
         class = classNames
         data-data=data
         data-key=key
