--- a/demo/components/slider/slider.scss
+++ b/demo/components/slider/slider.scss
@@ -1,4 +1,21 @@
 .slider {
   width: 100%;
-  padding: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  outline: 1px solid green;
+
+  &__dummy {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+  }
 }
