--- a/demo/components/example/example.scss
+++ b/demo/components/example/example.scss
@@ -2,11 +2,27 @@
   width: 100%;
   padding: 1rem;
   display: flex;
-  box-sizing: border-box;
+  flex-direction: column;
+
+  &__label {
+    &.label {
+      text-align: center;
+      font-weight: bold;
+    }
+  }
+
+  &__body {
+    padding: 1rem 0;
+    display: flex;
+  }
 
   &__panel {
-    flex-shrink: 0;
-    max-width: 400px;
-    outline: 1px solid red;
+    &.panel {
+      flex-shrink: 0;
+      max-width: 400px;
+      border: 1px solid #e4e4e4;
+      border-radius: 4px;
+      padding: 1rem;
+    }
   }
 }
