--- a/demo/index.scss
+++ b/demo/index.scss
@@ -11,6 +11,6 @@ body {
 *,
 ::after,
 ::before {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
