--- a/src/style.scss
+++ b/src/style.scss
@@ -110,16 +110,16 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     border: 2px solid #ffffff;
     touch-action: pan-x;
     z-index: 2;
+
+    &.#{$prefixClass}__handle_active {
+      z-index: 100 !important;
+    }
   }
 
   &__handle:hover {
     .#{$prefixClass}__tooltip {
       display: block;
     }
-  }
-
-  &__handle_active {
-    z-index: 100;
   }
 
   &__tooltip {
