--- a/src/style.scss
+++ b/src/style.scss
@@ -113,6 +113,7 @@ $ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
 
     &.#{$prefixClass}__handle_active {
       z-index: 100 !important;
+      background: $second-color;
     }
   }
 
