--- a/demo/components/button/button.scss
+++ b/demo/components/button/button.scss
@@ -1,10 +1,12 @@
-.button {
+$parent: "button";
+
+.#{$parent} {
   width: 25px;
   height: 25px;
   min-width: 25px;
   min-height: 25px;
 
-  button {
+  &__button {
     width: 100%;
     height: 100%;
   }
@@ -18,5 +20,9 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
+  }
+
+  &_control {
+    display: flex;
   }
 }
